[gd_scene load_steps=11 format=3 uid="uid://bdjh31gyjqnie"]

[ext_resource type="PackedScene" uid="uid://dc161l2reoe5e" path="res://Mario.blend" id="1_5cwfg"]
[ext_resource type="Script" path="res://CharacterCreator/CharacterCreation.gd" id="1_ramh3"]
[ext_resource type="Theme" uid="uid://3lpcmlrjk4do" path="res://CharacterCreator/new_theme.tres" id="2_r4snq"]
[ext_resource type="PackedScene" uid="uid://bclis6kdsyvlw" path="res://CharacterCreator/Hats/HatSelector.tscn" id="3_if7e7"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ut6p6"]
diffuse_mode = 3
specular_mode = 1
roughness = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_436sf"]
diffuse_mode = 3
specular_mode = 1
roughness = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_miu5v"]
diffuse_mode = 3
specular_mode = 1
roughness = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2qaq1"]
diffuse_mode = 3
specular_mode = 1
roughness = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vf2it"]
diffuse_mode = 3
specular_mode = 1
roughness = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ypyck"]
transparency = 1
diffuse_mode = 3
specular_mode = 1
albedo_color = Color(1, 1, 1, 0)
roughness = 0.3

[node name="CharacterCreation" type="CanvasLayer"]
script = ExtResource("1_ramh3")

[node name="Mario" parent="." instance=ExtResource("1_5cwfg")]
transform = Transform3D(0.508127, 0, 0, 0, 0.508127, 0, 0, 0, 0.508127, 0, 10, 0)

[node name="Skeleton3D" parent="Mario/Armature" index="0"]
bones/4/rotation = Quaternion(0.000913383, -4.74908e-24, -3.721e-26, 1)
bones/7/rotation = Quaternion(-0.586346, -0.394558, 0.58794, -0.393509)
bones/7/scale = Vector3(1, 1, 1)
bones/8/rotation = Quaternion(-0.163111, 7.42046e-05, -0.000447714, 0.986608)
bones/9/rotation = Quaternion(-0.0216864, -1.09796e-05, 0.000500137, 0.999765)
bones/9/scale = Vector3(1, 1, 1)
bones/10/rotation = Quaternion(-0.0300949, 0.050227, -0.0318767, 0.997775)
bones/11/rotation = Quaternion(9.96966e-08, 7.33776e-09, 0.280525, 0.959847)
bones/11/scale = Vector3(1, 1, 1)
bones/13/rotation = Quaternion(0.0681372, 4.07003e-07, 1.32527e-07, 0.997676)
bones/15/rotation = Quaternion(0.0611222, 0.00286438, 0.0467253, 0.997032)
bones/17/rotation = Quaternion(-0.177676, 2.2612e-07, 5.57634e-08, 0.984089)
bones/17/scale = Vector3(1, 1, 1)
bones/18/rotation = Quaternion(7.47164e-06, 0.000480322, 7.918e-05, 1)
bones/18/scale = Vector3(1, 1, 1)
bones/19/rotation = Quaternion(9.96966e-08, 7.33776e-09, 0.280525, 0.959847)
bones/19/scale = Vector3(1, 1, 1)
bones/21/rotation = Quaternion(0.0681372, 4.07003e-07, 1.32527e-07, 0.997676)
bones/22/rotation = Quaternion(0.0611222, 0.00286438, 0.0467253, 0.997032)
bones/24/rotation = Quaternion(-0.177676, 2.2612e-07, 5.57634e-08, 0.984089)
bones/24/scale = Vector3(1, 1, 1)
bones/25/rotation = Quaternion(0.587496, -0.393797, 0.586793, 0.394266)
bones/25/scale = Vector3(1, 1, 1)
bones/26/rotation = Quaternion(-0.16311, -0.000705259, 0.00426633, 0.986598)
bones/27/rotation = Quaternion(-0.0216894, 4.6538e-05, -0.00214584, 0.999762)
bones/28/rotation = Quaternion(-0.0245285, -0.0281942, 0.0165849, 0.999164)
bones/29/rotation = Quaternion(-3.24019e-08, -2.07734e-09, -0.255905, 0.966702)
bones/29/scale = Vector3(1, 1, 1)
bones/30/rotation = Quaternion(-0.00688744, 1.36442e-07, 9.54042e-08, 0.999976)
bones/30/scale = Vector3(1, 1, 1)
bones/32/rotation = Quaternion(0.000206358, -0.000912647, 4.38534e-05, 1)
bones/33/rotation = Quaternion(0.044944, -0.00198272, -0.0440286, 0.998017)
bones/34/rotation = Quaternion(0.150241, -1.71329e-08, -8.65476e-09, 0.988649)
bones/35/rotation = Quaternion(-0.105886, 1.16605e-07, -3.9805e-09, 0.994378)
bones/36/rotation = Quaternion(-1.93153e-05, -0.000858672, -3.63761e-05, 1)
bones/36/scale = Vector3(1, 1, 1)
bones/37/rotation = Quaternion(-3.24019e-08, -2.07734e-09, -0.255905, 0.966702)
bones/37/scale = Vector3(1, 1, 1)
bones/38/rotation = Quaternion(-0.00688744, 1.36442e-07, 9.54042e-08, 0.999976)
bones/38/scale = Vector3(1, 1, 1)
bones/40/rotation = Quaternion(0.044944, -0.00198272, -0.0440286, 0.998017)
bones/41/rotation = Quaternion(0.150241, -1.71329e-08, -8.65476e-09, 0.988649)
bones/42/rotation = Quaternion(-0.105886, 1.16605e-07, -3.9805e-09, 0.994378)
bones/43/rotation = Quaternion(0.000395184, 0.00725177, 0.99844, -0.0553595)
bones/43/scale = Vector3(0.999983, 1, 1)
bones/44/rotation = Quaternion(-0.0248535, 0.000215835, -0.00912242, 0.999649)
bones/44/scale = Vector3(1, 1, 1)
bones/45/scale = Vector3(1, 1, 1)
bones/46/rotation = Quaternion(0.266656, -0.0350381, 0.00970259, 0.963106)
bones/46/scale = Vector3(1, 1, 1)
bones/48/rotation = Quaternion(-0.000358822, 0.00653708, 0.998445, 0.0553602)
bones/49/rotation = Quaternion(-0.0137987, -0.000121044, 0.00914077, 0.999863)
bones/50/rotation = Quaternion(0.460123, 0.0692681, -0.0360363, 0.884415)
bones/50/scale = Vector3(1, 1, 1)
bones/51/rotation = Quaternion(0.272711, 0.0227246, -0.00644368, 0.961806)
bones/52/rotation = Quaternion(-1.1602e-06, -1.57393e-06, 2.55532e-07, 1)
bones/53/rotation = Quaternion(0, 0.00499998, 0, 0.999987)
bones/54/rotation = Quaternion(-3.77263e-08, -0.00499998, -1.89826e-10, 0.999987)
bones/55/rotation = Quaternion(1, 2.38615e-12, -4.37114e-08, -3.80851e-12)
bones/56/rotation = Quaternion(1, 2.38615e-12, -7.54979e-08, 3.81206e-12)
bones/57/rotation = Quaternion(0.0512239, 0.998655, -0.0079487, -0.000396271)
bones/57/scale = Vector3(1, 1, 1)
bones/58/rotation = Quaternion(-0.0264748, 9.40329e-06, 3.61223e-07, 0.999649)
bones/59/rotation = Quaternion(0.0512239, 0.998655, -0.0079487, -0.000396271)
bones/59/scale = Vector3(1, 1, 1)
bones/60/rotation = Quaternion(-0.0264748, 9.40329e-06, 3.61223e-07, 0.999649)
bones/61/scale = Vector3(1, 1, 1)
bones/63/rotation = Quaternion(0.266656, -0.035037, 0.00970194, 0.963106)
bones/64/rotation = Quaternion(-0.0512241, 0.998657, -0.00774889, 0.000392224)
bones/64/scale = Vector3(1, 1, 1)
bones/66/rotation = Quaternion(-0.0512241, 0.998657, -0.00774889, 0.000392224)
bones/66/scale = Vector3(1, 1, 1)
bones/68/rotation = Quaternion(0.703907, 0.115157, -0.0417799, 0.699648)
bones/69/rotation = Quaternion(-0.29891, -0.0544215, 0.0170757, 0.952575)
bones/70/rotation = Quaternion(0.272711, 0.0227248, -0.00644377, 0.961806)
bones/70/scale = Vector3(1, 1, 1)
bones/74/rotation = Quaternion(0.000913383, -4.75003e-24, -3.72034e-26, 1)
bones/76/rotation = Quaternion(-0.586346, -0.394558, 0.58794, -0.393509)
bones/76/scale = Vector3(1, 1, 1)
bones/77/rotation = Quaternion(-0.175334, -0.00124195, -0.012523, 0.984429)
bones/78/rotation = Quaternion(6.69246e-08, 3.01694e-07, 0.0216922, 0.999765)
bones/79/rotation = Quaternion(-0.502549, -0.498354, 0.515262, -0.483314)
bones/79/scale = Vector3(1, 1, 1)
bones/80/rotation = Quaternion(6.06175e-08, 3.20851e-07, 0.0216922, 0.999765)
bones/81/rotation = Quaternion(-0.0388835, 0.0494567, -0.0414226, 0.997159)
bones/81/scale = Vector3(1, 1, 1)
bones/82/rotation = Quaternion(0.587496, -0.393797, 0.586793, 0.394266)
bones/82/scale = Vector3(1, 1, 1)
bones/83/rotation = Quaternion(-0.175328, 0.00180373, 0.0152167, 0.984391)
bones/84/rotation = Quaternion(-8.73072e-08, 1.30718e-06, -0.0217953, 0.999762)
bones/84/scale = Vector3(1, 1, 1)
bones/85/rotation = Quaternion(0.502149, -0.49876, 0.515649, 0.482897)
bones/85/scale = Vector3(1, 1, 1)
bones/86/rotation = Quaternion(-6.7472e-08, 1.30035e-06, -0.0217953, 0.999762)
bones/87/rotation = Quaternion(-0.0335717, -0.0288703, 0.0252292, 0.998701)
bones/89/rotation = Quaternion(0.496904, 0.550846, -0.479872, 0.468378)
bones/89/scale = Vector3(1, 1, 1)
bones/91/rotation = Quaternion(-0.497482, 0.530776, -0.486115, -0.484233)
bones/91/scale = Vector3(1, 1, 1)
bones/92/rotation = Quaternion(0.0772884, 0.70287, 0.70287, -0.0772857)
bones/93/rotation = Quaternion(-0.294386, 0.0559598, -0.0172689, 0.953891)
bones/93/scale = Vector3(1, 1, 1)
bones/94/rotation = Quaternion(0.294386, -0.0559598, 0.0172689, 0.953891)
bones/94/scale = Vector3(1, 1, 1)
bones/95/rotation = Quaternion(0.266656, -0.0350371, 0.00970194, 0.963106)
bones/95/scale = Vector3(1, 1, 1)
bones/96/rotation = Quaternion(5.89993e-07, 5.14253e-06, 1.38825e-07, 1)
bones/97/rotation = Quaternion(-1.21642e-06, -1.1907e-05, -2.80328e-07, 1)
bones/98/rotation = Quaternion(-3.73019e-09, 0.048458, 8.95121e-08, 0.998825)
bones/101/rotation = Quaternion(-0.0286108, -0.0297224, -0.013387, 0.999059)
bones/101/scale = Vector3(1, 1, 1)
bones/103/rotation = Quaternion(-0.266656, 0.035037, -0.00970194, 0.963106)
bones/103/scale = Vector3(1, 1, 1)
bones/104/rotation = Quaternion(-0.0585616, -1.05245e-08, 0.998284, -2.68012e-08)
bones/104/scale = Vector3(1, 1, 1)
bones/105/rotation = Quaternion(0.703754, -0.0687722, -0.0687721, 0.703755)
bones/105/scale = Vector3(1, 1, 1)
bones/106/rotation = Quaternion(-9.77889e-09, 3.35742e-07, -9.0804e-09, 1)
bones/109/rotation = Quaternion(-0.0788968, 0.702692, 0.702692, 0.078893)
bones/109/scale = Vector3(1, 1, 1)
bones/110/rotation = Quaternion(-0.29891, -0.0544219, 0.0170756, 0.952575)
bones/110/scale = Vector3(1, 1, 1)
bones/111/rotation = Quaternion(0.29891, 0.0544219, -0.0170756, 0.952575)
bones/112/rotation = Quaternion(0.272711, 0.022725, -0.00644378, 0.961806)
bones/112/scale = Vector3(1, 1, 1)
bones/115/rotation = Quaternion(-4.19642e-09, -0.0468879, -8.95053e-08, 0.9989)
bones/118/rotation = Quaternion(-0.0268627, 0.0189086, 0.0196151, 0.999268)
bones/119/rotation = Quaternion(-5.84172e-07, 5.02705e-06, -2.38651e-09, 1)
bones/120/rotation = Quaternion(-0.272711, -0.022725, 0.00644374, 0.961806)
bones/120/scale = Vector3(1, 1, 1)
bones/121/rotation = Quaternion(0.0570354, 6.23838e-09, 0.998372, -2.16031e-08)
bones/121/scale = Vector3(1, 1, 1)
bones/122/rotation = Quaternion(0.703148, 0.0747188, 0.0747187, 0.703148)
bones/122/scale = Vector3(1, 1, 1)
bones/124/rotation = Quaternion(8.53408e-14, 7.73781e-12, -4.32461e-18, 1)

[node name="Body_001" parent="Mario/Armature/Skeleton3D" index="0"]
layers = 4
surface_material_override/0 = SubResource("StandardMaterial3D_ut6p6")
surface_material_override/1 = SubResource("StandardMaterial3D_436sf")
surface_material_override/2 = SubResource("StandardMaterial3D_miu5v")
surface_material_override/3 = SubResource("StandardMaterial3D_2qaq1")
surface_material_override/4 = SubResource("StandardMaterial3D_vf2it")
surface_material_override/5 = SubResource("StandardMaterial3D_ypyck")

[node name="HatSelector" parent="Mario/Armature/Skeleton3D/Body_001" index="0" instance=ExtResource("3_if7e7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.74911, 0)

[node name="Body_003" parent="Mario/Armature/Skeleton3D/Body_001/HatSelector/MarioHat/RootNode" index="0"]
layers = 4

[node name="Cylinder" parent="Mario/Armature/Skeleton3D/Body_001/HatSelector/YellowHat/RootNode" index="0"]
layers = 4

[node name="Cube" parent="Mario/Armature/Skeleton3D/Body_001/HatSelector/Hair1/RootNode" index="0"]
layers = 4

[node name="Cube" parent="Mario/Armature/Skeleton3D/Body_001/HatSelector/Afro/RootNode" index="0"]
layers = 4

[node name="Cylinder" parent="Mario/Armature/Skeleton3D/Body_001/HatSelector/Minion/RootNode" index="0"]
layers = 4

[node name="Body_002" parent="Mario/Armature/Skeleton3D/Body_001/HatSelector/Hair2/RootNode" index="0"]
layers = 4

[node name="Cylinder" parent="Mario/Armature/Skeleton3D/Body_001/HatSelector/Hat/RootNode" index="0"]
layers = 4

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_r4snq")

[node name="TabContainer" type="TabContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 19.0
offset_top = -292.0
offset_right = 614.0
offset_bottom = 299.0
grow_vertical = 2
current_tab = 1

[node name="Proportions" type="TabBar" parent="Panel/TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/TabContainer/Proportions"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 8.0
offset_right = -10.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2

[node name="SizeText2" type="Label" parent="Panel/TabContainer/Proportions/VBoxContainer"]
layout_mode = 2
text = "Size
"

[node name="SizeSlider2" type="HSlider" parent="Panel/TabContainer/Proportions/VBoxContainer"]
layout_mode = 2
min_value = 0.5
max_value = 2.0
step = 0.05
value = 1.0

[node name="JawText" type="Label" parent="Panel/TabContainer/Proportions/VBoxContainer"]
layout_mode = 2
text = "Jaw
"

[node name="JawSlider" type="HSlider" parent="Panel/TabContainer/Proportions/VBoxContainer"]
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.05

[node name="ShoulderText" type="Label" parent="Panel/TabContainer/Proportions/VBoxContainer"]
layout_mode = 2
text = "Shoulder
"

[node name="ShoulderSlider" type="HSlider" parent="Panel/TabContainer/Proportions/VBoxContainer"]
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.05

[node name="ArmText" type="Label" parent="Panel/TabContainer/Proportions/VBoxContainer"]
layout_mode = 2
text = "Arms
"

[node name="ArmsSlider2" type="HSlider" parent="Panel/TabContainer/Proportions/VBoxContainer"]
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.05

[node name="BellyText3" type="Label" parent="Panel/TabContainer/Proportions/VBoxContainer"]
layout_mode = 2
text = "Belly
"

[node name="BellySlider3" type="HSlider" parent="Panel/TabContainer/Proportions/VBoxContainer"]
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.05

[node name="ButtText4" type="Label" parent="Panel/TabContainer/Proportions/VBoxContainer"]
layout_mode = 2
text = "Butt"

[node name="ButtSlider4" type="HSlider" parent="Panel/TabContainer/Proportions/VBoxContainer"]
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.05

[node name="LegsText5" type="Label" parent="Panel/TabContainer/Proportions/VBoxContainer"]
layout_mode = 2
text = "Legs"

[node name="LegsSlider5" type="HSlider" parent="Panel/TabContainer/Proportions/VBoxContainer"]
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.05

[node name="BoobsText6" type="Label" parent="Panel/TabContainer/Proportions/VBoxContainer"]
layout_mode = 2
text = "Boobs
"

[node name="BoobsSlider6" type="HSlider" parent="Panel/TabContainer/Proportions/VBoxContainer"]
layout_mode = 2
min_value = -1.0
max_value = 1.0
step = 0.05

[node name="Face" type="TabBar" parent="Panel/TabContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/TabContainer/Face"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 6.0
offset_right = -8.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/TabContainer/Face/VBoxContainer"]
layout_mode = 2
text = "Hat"

[node name="HatSlider" type="HSlider" parent="Panel/TabContainer/Face/VBoxContainer"]
layout_mode = 2
min_value = -1.0
max_value = 10.0
value = -1.0

[node name="Label2" type="Label" parent="Panel/TabContainer/Face/VBoxContainer"]
layout_mode = 2
text = "Face"

[node name="TextureRect" type="TextureRect" parent="Panel/TabContainer/Face/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 4

[node name="FilePath" type="LineEdit" parent="Panel/TabContainer/Face/VBoxContainer"]
layout_mode = 2
placeholder_text = "File Path"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/TabContainer/Face/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Panel/TabContainer/Face/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Load"

[node name="Button2" type="Button" parent="Panel/TabContainer/Face/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Clear"

[node name="Colors" type="TabBar" parent="Panel/TabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/TabContainer/Colors"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 10.0
offset_right = -14.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/TabContainer/Colors/VBoxContainer"]
layout_mode = 2
text = "Skin"

[node name="SkinColor" type="ColorPickerButton" parent="Panel/TabContainer/Colors/VBoxContainer"]
custom_minimum_size = Vector2(0, 54.915)
layout_mode = 2
color = Color(0.796078, 0.768627, 0.698039, 1)
edit_alpha = false

[node name="Label2" type="Label" parent="Panel/TabContainer/Colors/VBoxContainer"]
layout_mode = 2
text = "Shirt"

[node name="ShirtColor" type="ColorPickerButton" parent="Panel/TabContainer/Colors/VBoxContainer"]
custom_minimum_size = Vector2(0, 54.915)
layout_mode = 2
color = Color(0.658824, 0.215686, 0.239216, 1)
edit_alpha = false

[node name="Label3" type="Label" parent="Panel/TabContainer/Colors/VBoxContainer"]
layout_mode = 2
text = "Gloves"

[node name="GloveColor" type="ColorPickerButton" parent="Panel/TabContainer/Colors/VBoxContainer"]
custom_minimum_size = Vector2(0, 54.915)
layout_mode = 2
color = Color(0.952941, 0.952941, 0.94902, 1)
edit_alpha = false

[node name="Label4" type="Label" parent="Panel/TabContainer/Colors/VBoxContainer"]
layout_mode = 2
text = "Pants
"

[node name="PantsColor" type="ColorPickerButton" parent="Panel/TabContainer/Colors/VBoxContainer"]
custom_minimum_size = Vector2(0, 54.915)
layout_mode = 2
text = "PantsColor"
color = Color(0.188235, 0.356863, 0.435294, 1)
edit_alpha = false

[node name="Label5" type="Label" parent="Panel/TabContainer/Colors/VBoxContainer"]
layout_mode = 2
text = "Boots"

[node name="BootsColor" type="ColorPickerButton" parent="Panel/TabContainer/Colors/VBoxContainer"]
custom_minimum_size = Vector2(0, 54.915)
layout_mode = 2
color = Color(0.0941176, 0.0784314, 0.0431373, 1)
edit_alpha = false

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
clip_contents = true
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -518.0
offset_top = -303.0
offset_right = -8.0
offset_bottom = 285.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(510, 588)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 3.752)
cull_mask = 4

[node name="HSlider" type="HSlider" parent="SubViewportContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(512, 575.385)
layout_mode = 2
min_value = -100.0
allow_greater = true
allow_lesser = true

[node name="Save" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -162.0
offset_bottom = 41.0
grow_horizontal = 0
text = "Save & Close"

[connection signal="value_changed" from="Panel/TabContainer/Proportions/VBoxContainer/SizeSlider2" to="." method="_on_size_slider_2_value_changed"]
[connection signal="value_changed" from="Panel/TabContainer/Proportions/VBoxContainer/JawSlider" to="." method="_on_jaw_slider_value_changed"]
[connection signal="value_changed" from="Panel/TabContainer/Proportions/VBoxContainer/ShoulderSlider" to="." method="_on_shoulder_slider_value_changed"]
[connection signal="value_changed" from="Panel/TabContainer/Proportions/VBoxContainer/ArmsSlider2" to="." method="_on_arms_slider_2_value_changed"]
[connection signal="value_changed" from="Panel/TabContainer/Proportions/VBoxContainer/BellySlider3" to="." method="_on_belly_slider_3_value_changed"]
[connection signal="value_changed" from="Panel/TabContainer/Proportions/VBoxContainer/ButtSlider4" to="." method="_on_butt_slider_4_value_changed"]
[connection signal="value_changed" from="Panel/TabContainer/Proportions/VBoxContainer/LegsSlider5" to="." method="_on_legs_slider_5_value_changed"]
[connection signal="value_changed" from="Panel/TabContainer/Proportions/VBoxContainer/BoobsSlider6" to="." method="_on_boobs_slider_6_value_changed"]
[connection signal="value_changed" from="Panel/TabContainer/Face/VBoxContainer/HatSlider" to="." method="_on_hat_slider_value_changed"]
[connection signal="button_up" from="Panel/TabContainer/Face/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_button_up"]
[connection signal="button_up" from="Panel/TabContainer/Face/VBoxContainer/HBoxContainer/Button2" to="." method="_on_button_2_button_up"]
[connection signal="color_changed" from="Panel/TabContainer/Colors/VBoxContainer/SkinColor" to="." method="_on_skin_color_color_changed"]
[connection signal="color_changed" from="Panel/TabContainer/Colors/VBoxContainer/ShirtColor" to="." method="_on_shirt_color_color_changed"]
[connection signal="color_changed" from="Panel/TabContainer/Colors/VBoxContainer/GloveColor" to="." method="_on_glove_color_color_changed"]
[connection signal="color_changed" from="Panel/TabContainer/Colors/VBoxContainer/PantsColor" to="." method="_on_pants_color_color_changed"]
[connection signal="color_changed" from="Panel/TabContainer/Colors/VBoxContainer/BootsColor" to="." method="_on_boots_color_color_changed"]
[connection signal="value_changed" from="SubViewportContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="button_down" from="Save" to="." method="saveCharacter"]

[editable path="Mario"]
[editable path="Mario/Armature/Skeleton3D/Body_001/HatSelector"]
[editable path="Mario/Armature/Skeleton3D/Body_001/HatSelector/MarioHat"]
[editable path="Mario/Armature/Skeleton3D/Body_001/HatSelector/YellowHat"]
[editable path="Mario/Armature/Skeleton3D/Body_001/HatSelector/Hair1"]
[editable path="Mario/Armature/Skeleton3D/Body_001/HatSelector/Afro"]
[editable path="Mario/Armature/Skeleton3D/Body_001/HatSelector/Minion"]
[editable path="Mario/Armature/Skeleton3D/Body_001/HatSelector/Hair2"]
[editable path="Mario/Armature/Skeleton3D/Body_001/HatSelector/Hat"]
